[FIX] Update the game board cards to be rectangle shape to allow for better viewing on mobile devices in landscape mode

--- a/app/app.css
+++ b/app/app.css
@@ -1,204 +1,9 @@
-/* body {
-    margin: 0;
-    background: linear-gradient(180deg, rgb(134, 125, 164), rgb(255, 255, 255));
-    display: flex;
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
-  } */
-  
-  /* main {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-  }
-  
-  button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-    color: white;
-  }
-  button:hover {
-    border-color: #646cff;
-  }
-  button:focus,
-  button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
-  
-  ul {
-    padding-inline-start: 0;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    margin: 8px 0;
-    border: 1px solid black;
-    gap: 1px;
-    background-color: black;
-    border-radius: 8px;
-    overflow: auto;
-  }
-  
-  li {
-    background-color: white;
-    padding: 8px;
-  }
-  
-  li:hover {
-    background: #dadbf9;
-  }
-  
-  a {
-    font-weight: 800;
-    text-decoration: none;
-  } */
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-  /* code names */
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    background-color: #1a1a1a;
-    color: #ccc;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-  }
   
-  main {
-    width: 100%;
-    /* max-width: 500px; */
-  }
-  
-  h1 {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-  }
-  
-  a {
-    color: #ccc;
-    text-decoration: none;
-  }
-  
-.game-board {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 5px;
-  margin-bottom: 10px;
-}
-.card {
-    height: 70px;
-    background-color: #e8e8e8;
-    color: black;
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-weight: bold;
-    transition: background-color 0.3s;
-}
-.card:hover {
-  border-width: 3px; 
-  border-color: #646cff;
-}
-
-.card.red { background-color: #ffcccb; }
-.card.red.hidden { background-color: #e8e8e8; color: rgb(223, 60, 60);}
-.card.blue { background-color: #cce5ff; }
-.card.blue.hidden { background-color: #e8e8e8; color: rgb(33, 33, 228); }
-.card.neutral { background-color: #f5f5dc; }
-.card.neutral.hidden { background-color: #e8e8e8; color: black; }
-.card.assassin { background-color: #2f4f4f; color: white; }
-  /* Controls and other UI elements */
-.controls, .category-input {
-  width: 100%;
-  text-align: center; /* Center-align the controls */
-  margin: 20px auto; /* Ensure there's spacing around the controls */
-}
-.spymaster-toggle {
-    margin-bottom: 10px;
-}
-.turn-indicator {
-    font-size: 1.0em;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-.score-board {
-  font-size: 1.0em;
-  font-weight: bold;
-  text-align: left;
-}
-
-.redCardsLeft {
-  color: rgb(223, 60, 60);
-}
-.blueCardsLeft {
-  color: rgb(33, 33, 228);
-}
-.category-input input {
-    width: 150px;
-    margin: 5px;
-}
-.game-id-input input {
-  width: 250px;
-  margin: 5px;
-}
-.loading {
-    display: none;
-    margin: 20px;
-    font-style: italic;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #eee;;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  margin: 10px; /* Adds space between buttons */
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (max-width: 500px) {
-  .card {
-    font-size: 12px;
-  }
-  
-  button {
-    font-size: 12px;
-    padding: 6px 12px;
-  }
-}
-
 @layer base {
   :root {
         --background: 0 0% 100%;
